# karma

./: .bzrignore  .gitignore  .nfs0000000000a574cc00000003  README.md  karma-overlay.xml  karma-overlay.xml.old  push  sets.conf
acct-group/fido/: fido-0.ebuild
acct-group/uinput/: uinput-0.ebuild
app-accessibility/festival-ru/: Manifest  festival-ru-0.4.ebuild
app-admin/chezmoi/: Manifest  chezmoi-2.42.2.ebuild  chezmoi-2.60.0.ebuild
app-admin/chezmoi-bin/: Manifest
app-admin/chkrootkit/: ChangeLog  chkrootkit-0.37.ebuild  chkrootkit-0.39a.ebuild  chkrootkit-0.41-r1.ebuild  chkrootkit-0.42b.ebuild
app-admin/conduit/: Manifest  conduit-0.3.15.ebuild
app-admin/cpu/: ChangeLog  Manifest  cpu-1.3.13.ebuild  cpu-1.3.99.ebuild  cpu-1.4.2-r1.ebuild
app-admin/eselect/: Manifest  eselect-1.0.2.ebuild  eselect-1.0.5.ebuild  eselect-1.0.7.ebuild  eselect-1.0.9.ebuild
app-admin/eselect-blas/: Manifest  eselect-blas-0.1.ebuild
app-admin/eselect-boost/: Manifest
app-admin/eselect-cblas/: Manifest  eselect-cblas-0.1.ebuild
app-admin/eselect-compiler/: eselect-compiler-2.0.0_rc1-r1.ebuild
app-admin/eselect-ecj/: Manifest  eselect-ecj-0.2.ebuild
app-admin/eselect-emacs/: Manifest  eselect-emacs-0.8-r1.ebuild
app-admin/eselect-news/: ChangeLog  Manifest  eselect-news-0.1.2.ebuild
app-admin/eselect-oodict/: Manifest  eselect-oodict-20060621.ebuild  eselect-oodict-20060706.ebuild
app-admin/eselect-opengl/: Manifest  eselect-opengl-1.0.3.ebuild
app-admin/eselect-paludis-hooks/: ChangeLog  Manifest  eselect-paludis-hooks-0.1.2-r1.ebuild  eselect-paludis-hooks-0.2.0.ebuild
app-admin/eselect-php/: eselect-php-0.96.ebuild
app-admin/eselect-timidity/: Manifest  eselect-timidity-20061203.ebuild
app-admin/fedora-admin-console/: ChangeLog  Manifest  fedora-admin-console-1.1.1.ebuild
app-admin/fedora-ds-admin-console/: ChangeLog  Manifest  fedora-ds-admin-console-1.1.2.ebuild
app-admin/fedora-ds-console/: ChangeLog  Manifest  fedora-ds-console-1.1.1.ebuild  fedora-ds-console-1.1.2.ebuild
app-admin/fedora-idm-console/: ChangeLog  Manifest  fedora-idm-console-1.1.1-r1.ebuild  fedora-idm-console-1.1.1.ebuild
app-admin/gnome-system-tools/: Manifest  gnome-system-tools-2.14.0.ebuild
app-admin/gopass-ui/: Manifest  gopass-ui-0.7.0.ebuild  gopass-ui-0.8.0.ebuild
app-admin/grubconfig/: ChangeLog  Manifest  grubconfig-1.16-r1.ebuild
app-admin/keepass/: Manifest  keepass-2.30.ebuild
app-admin/monit/: Manifest  monit-4.7.ebuild  monit-4.8.1.ebuild
app-admin/monit-/: Manifest  monit-4.4.ebuild
app-admin/noc/: Manifest  noc-0.3.1.ebuild  noc-0.3.2.ebuild  noc-0.4.ebuild
app-admin/pass-audit/: Manifest  pass-audit-1.1.ebuild  pass-audit-1.2.ebuild
app-admin/pass-import/: Manifest  metadata.xml  pass-import-3.1.ebuild  pass-import-3.2.ebuild  pass-import-3.5.ebuild
app-admin/passless/: Manifest  passless-0.11.2.ebuild
app-admin/python-updater/: Manifest  python-updater-0.8.ebuild
app-admin/samhain/: Manifest  samhain-1.7.11.ebuild
app-admin/smbldap-tools-/: Manifest  smbldap-tools-0.7.ebuild  smbldap-tools-0.8.1.ebuild  smbldap-tools-0.8.3.ebuild  smbldap-tools-0.8.4.ebuild
app-admin/systemconfigurator/: Manifest  systemconfigurator-2.2.11.ebuild  systemconfigurator-2.2.2.ebuild
app-admin/systemimager-boot/: Manifest  systemimager-boot-3.1.8.ebuild  systemimager-boot-3.3.2.ebuild  systemimager-boot-3.4.0.ebuild  systemimager-boot-3.4.1.ebuild  systemimager-boot-3.5.3.ebuild  systemimager-boot-3.6.2.ebuild  systemimager-boot-3.6.3.ebuild  systemimager-boot-3.7.3.ebuild  systemimager-boot-3.7.6.ebuild  systemimager-boot-3.8.2.ebuild  systemimager-boot-3.9.4.ebuild  systemimager-boot-3.9.6.ebuild  systemimager-boot-4.1.6.ebuild
app-admin/systemimager-boot-bin/: Manifest  systemimager-boot-bin-3.0.1.ebuild
app-admin/systemimager-client/: ChangeLog  Manifest  systemimager-client-3.4.1.ebuild  systemimager-client-3.5.3.ebuild  systemimager-client-3.6.2.ebuild  systemimager-client-3.7.3.ebuild  systemimager-client-4.1.6.ebuild
app-admin/systemimager-client-bin/: systemimager-client-bin-3.0.1.ebuild
app-admin/systemimager-common/: Manifest  systemimager-common-3.4.1.ebuild  systemimager-common-3.5.3.ebuild  systemimager-common-3.6.3.ebuild  (+2 more)
app-admin/systemimager-common-bin/: ChangeLog  systemimager-common-bin-3.0.1.ebuild
cross-i686-pc-linux-gnu/: binutils  gcc  gdb  glibc  linux-headers
dev-tcltk/otcl/files/: CMakeLists.txt  otcl-1.13-configure-cleanup.patch  otcl-1.14-configure-cleanup.patch  otcl.pc.cmake
dev-tcltk/tclcl/files/: CMakeLists.txt  config-tclcl.h.cmake  tclcl-1.19-configure-cleanup.patch  tclcl.pc.cmake
eclass/: 1.patch  alternatives-2.eclass  apache-2.eclass  bzr.eclass  bzr.eclass-  cernlib.eclass  clutter.eclass  doc-tex.eclass  e2fsprogs-git.eclass  eclipse-ext-2.eclass  elisp-common.eclass  elisp-common.eclass.20060110  elisp-common.eclass.20061104  elisp-common.eclass.2021-06-12  elisp.eclass.20050218  elisp.eclass.20060814  etoile-svn.eclass  extrafiles.eclass  font.eclass  fonts.eclass  fonts.eclass.20031127  fonts.eclass.20040624  fonts.eclass.20040927  gcc-java-2.eclass  gnustep-2.eclass  gnustep-app-gui.eclass  gnustep-app.eclass  gnustep-app.eclass.20040122  gnustep-app.eclass.20040915  gnustep-base.eclass  gnustep-base.eclass.20040122  gnustep-base.eclass.20040914  gnustep-base.eclass.20070812  gnustep-base.eclass.orig  gnustep-env.eclass  gnustep-wrapper.eclass  golang-common.eclass  golang-live.eclass  golang-single.eclass  gtk-sharp-module.eclass  (+31 more)
gnustep-apps/: etoile_rename
gnustep-libs/: etoile_rename
metadata/: layout.conf
profiles/: categories  package.mask  repo_name  thirdpartymirrors  use.desc  virtuals
scripts/: glitz_remerge  mk_fontpath_d  png12topng14  png14topng15  pngtopng16  remove-blocked  remove_broken_symlinks  rm_heimdal.la  rm_libpcreposix.la  rm_libxcb-xlib.la  rsync-texlive-tree
sets/: kde-4.1  kde-extras-4.1  kdeadmin-4.1  kdeartwork-4.1  kdebase-4.1  kdeedu-4.1  kdegames-4.1  kdegraphics-4.1  kdemultimedia-4.1  kdenetwork-4.1  kdepim-4.1  kdesdk-4.1  kdetoys-4.1  kdeutils-4.1
(+14041 files in other folders)
